--- a/shopping-cart/src/App.css
+++ b/shopping-cart/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+footer {
+  position: absolute;
+  bottom: -55px;
+  width: 100%;
+  background-color: #333;
+  color:#fff;
+}
