--- a/shopping-cart/src/App.css
+++ b/shopping-cart/src/App.css
@@ -44,3 +44,33 @@ footer {
   background-color: #333;
   color:#fff;
 }
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+.main-modal {
+  position:fixed;
+  background: white;
+  width: 80%;
+  height: auto;
+  top:50%;
+  left:50%;
+  padding: 10px;
+  transform: translate(-50%,-50%);
+}
+.display-block {
+  display: block;
+}
+.display-none {
+  display: none;
+}
+
+#image {
+  object-fit: contain;
+  max-height: 40vh;
+}
+
